# ttf2bin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux.yml  release.yml
example/: fonts.toml
include/: font.h
src/: bin_font.rs  font_system.rs  gui.rs  main.rs
