[package]
name = "font_generator"
version = "0.2.0"
edition = "2021"
description = "Convert TTF fonts to .bin format for OS/embedded projects"

[[bin]]
name = "ttf2bin"
path = "src/main.rs"

[dependencies]
fontdue = "0.9"
toml    = "0.8"
serde   = { version = "1", features = ["derive"] }
eframe  = "0.35"
